feat: translate entire project to English
- Translate main README.md to English
- Translate mod README.md with complete documentation
- Translate CONTRIBUTING.md guide to English
- Translate marketplace submission guide
- Translate screenshot requirements documentation
- Translate all GitHub templates (PR, issue templates)
- Update all user-facing text and documentation
- Maintain code quality and formatting standards

All project content is now in English for international collaboration
and Zen Browser marketplace submission compatibility.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,25 @@
     "rootDir": "./",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "types": ["node", "jest"]
+    "lib": [
+      "ES2022",
+      "DOM",
+      "DOM.Iterable"
+    ],
+    "types": [
+      "node",
+      "jest"
+    ]
   },
-  "include": ["mods/**/*", "scripts/**/*", "*.ts"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
+  "include": [
+    "mods/**/*",
+    "scripts/**/*",
+    "*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.test.ts",
+    "**/*.spec.ts"
+  ]
 }
