--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,16 +6,27 @@
     "es2022": true,
     "jest": true
   },
-  "extends": ["eslint:recommended"],
+  "extends": [
+    "eslint:recommended"
+  ],
   "parserOptions": {
     "ecmaVersion": 2022,
     "sourceType": "module"
   },
   "rules": {
-    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_"
+      }
+    ],
     "prefer-const": "error",
     "no-var": "error",
     "no-console": "off"
   },
-  "ignorePatterns": ["dist/", "node_modules/", "*.d.ts"]
+  "ignorePatterns": [
+    "dist/",
+    "node_modules/",
+    "*.d.ts"
+  ]
 }
