chore(license): switch to AGPL-3.0-or-later
- Replace MIT license with AGPL v3
- Update license badge and mentions in README
- Update license fields in package.json and mod.json
- Add AGPL3 SPDX and copyright headers to all main JS/CSS files
- Set author to baxyz everywhere

Project is now fully AGPL-3.0-or-later compliant.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "browser-ui"
   ],
   "author": "Berenger",
-  "license": "MIT",
+  "license": "AGPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/baxyz/zen-mods/issues"
   },
