--- a/package.json
+++ b/package.json
@@ -5,16 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "npm run build:all-mods",
-    "build:all-mods": "node scripts/build-all.js",
-    "dev": "npm run build -- --watch",
-    "test": "jest",
-    "lint": "eslint . --ext .js,.ts",
-    "lint:fix": "eslint . --ext .js,.ts --fix",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "prepare": "husky install",
-    "release": "semantic-release"
+    "build": "node scripts/build-all.js",
+    "dev": "node scripts/build-all.js --watch"
   },
   "repository": {
     "type": "git",
@@ -35,33 +27,5 @@
     "url": "https://github.com/baxyz/zen-mods/issues"
   },
   "homepage": "https://github.com/baxyz/zen-mods#readme",
-  "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/jest": "^29.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "husky": "^8.0.0",
-    "jest": "^29.0.0",
-    "lint-staged": "^15.0.0",
-    "prettier": "^3.0.0",
-    "semantic-release": "^22.0.0",
-    "typescript": "^5.0.0"
-  },
-  "lint-staged": {
-    "*.{js,ts,json}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{md,yml,yaml}": [
-      "prettier --write"
-    ]
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
-  },
-  "packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321"
+  "packageManager": "pnpm@10.17.0"
 }
