--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "firefox",
     "browser-ui"
   ],
-  "author": "Berenger",
+  "author": "baxyz",
   "license": "AGPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/baxyz/zen-mods/issues"
