feat(ci): :construction_worker: supports zip files

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -45,7 +45,9 @@
         // License Header Management
         "psioniq.psi-header",
         // Language Pack (French)
-        "MS-CEINTL.vscode-language-pack-fr"
+        "MS-CEINTL.vscode-language-pack-fr",
+        // File support
+        "adamraichu.zip-viewer"
       ],
       "settings": {
         "typescript.preferences.useAliasesForRenames": false,
